--- a/AnroidTest/res/values/strings.xml
+++ b/AnroidTest/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="title_activity_main_activity3">MainActivity3</string>
 
 </resources>
