--- a/AnroidTest/res/values/strings.xml
+++ b/AnroidTest/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">AnroidTest</string>
@@ -6,5 +7,6 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
     <string name="title_activity_main_activity3">MainActivity3</string>
+    <string name="title_activity_main_activity4">MainActivity4</string>
 
 </resources>
